@@ -1,5 +1,8 @@
 2006-10-24  Richard Sandiford  <richard@codesourcery.com>
 
+	* src/space.c (find_readonly_space): Don't place the new section
+	in the PT_PHDR segment.
+
 	* src/prelink.h (data_iterator): New structure.
 	(init_data_iterator): Declare.
 	(get_data_from_iterator): Likewise.
